--- a/css/style.css
+++ b/css/style.css
@@ -124,11 +124,17 @@ input[type="radio"].visually-hidden {
   background: linear-gradient(#ffffff 40px, #f7e296 40px);
 }
 
+.logo-link {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
 .logo-wrapper {
   margin: 0;
   margin-left: 60px;
   margin-top: 22px;
-  margin-bottom: 26px;
+  margin-bottom: 16px;
   padding: 0;
 }
 
@@ -249,7 +255,15 @@ input[type="radio"].visually-hidden {
 }
 
 .visitor-navigation li {
+  margin: 0;
+  padding: 0;
   padding-left: 28px;
+}
+
+.login-link--enter,
+.logout-link {
+  margin: 0;
+  padding: 0;
 }
 
 .shopping-navigation {
@@ -735,15 +749,47 @@ input[type="radio"].visually-hidden {
 
 /*---Стили внутренней страницы---*/
 .inner-container {
+  margin: 0;
+  padding: 0;
   font-size: 14px;
   line-height: 24px;
 }
 
+.inner-container .container {
+  margin: 0 auto;
+  padding: 0;
+  padding-bottom: 47px;
+  width: 1160px;
+  background: linear-gradient(#f7e296 48px, #ffffff 48px);
+}
+
 .inner-container h1 {
+  margin: 0;
+  margin-left: 60px;
+  margin-bottom: 25px;
+  padding: 0;
+  padding-top: 85px;
+  
   font-family: "Gilroy", "Gill Sans", sans-serif;
   font-size: 47px;
   font-weight: 900;
   line-height: 48px;
+}
+
+.breadcrumbs {
+  display: flex;
+  margin: 0;
+  margin-left: 20px;
+  padding: 0;
+}
+
+.breadcrumbs li {
+  margin: 0;
+  padding: 0;
+}
+
+.breadcrumbs li {
+  padding-left: 40px;
 }
 
 .breadcrumbs a,
@@ -760,32 +806,205 @@ input[type="radio"].visually-hidden {
   color: rgba(0, 0, 0, 0.1);
 }
 
+.inner-container .wrapper {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+}
+
+.filters {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin: 0;
+  padding: 0;
+  min-width: 328px;
+  width: 37.46%;
+  background-color: #eeeeee;
+}
+
+.title-wrapper {
+  align-self: stretch;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 69px;
+  background-color: #dcdcdc;  
+}
+
+.filters .filter-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin: 0;
+  padding: 0;
+  width: 328px;
+  
+  background: transparent;
+}
+
+.filter {
+  margin: 0;
+  padding: 0;
+}
+
+.filter-container {
+  margin: 0;
+  margin-right: 73px;
+  padding: 0;
+  border-top: 2px solid #000000;
+  width: 200px;
+}
+
+.filter fieldset {
+  margin: 0;
+  margin-top: 10px;
+  padding: 0;
+  
+  border: none;
+}
+
+/*----------------------------------------------------*/
+.filter-item {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  
+  border: none;
+}
+
+.range-filter {
+  width: 200px;
+  margin-bottom: 28px;
+}
+
+.filter-item legend {
+  display: inline-block;
+  padding-top: 30px;
+  font-family: "Gilroy", "Gill Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 24px;
+}
+
+.range-controls {
+  position: relative;
+  height: 10px;
+  margin-bottom: 0;
+  padding-top: 35px;
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.range-controls .scale {
+  height: 2px;
+
+  background: #d7dcde;
+}
+
+.range-controls .bar {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 2px;
+
+  background: #91c92f;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 26px;
+  left: 0;
+  width: 4px;
+  height: 4px;
+  padding: 0;
+
+  border: 8px solid #ffffff;
+  background-color: #ababab;
+
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 0px;
+}
+
+.range-controls .toggle-max {
+  left: 110px;
+}
+
+.price-controls {
+  font-size: 0;
+}
+
+.price-controls label {
+  display: inline-block;
+  margin: 0;
+  margin-top: 2px;
+  margin-left: 2px;
+  padding: 0;
+  width: 44%;
+
+  font-family: "Gilroy", "Gill Sans", sans-serif;
+  font-size: 14px;
+  font-weight: none;
+  line-height: 24px;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.price-controls input {
+  width: 35px;
+  padding: 0;
+  margin: 0;
+
+  font-family: "Gilroy", "Gill Sans", sans-serif;
+  font-size: 14px;
+  font-weight: none;
+  line-height: 24px;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.2);
+
+  border: none;
+  background: transparent;
+}
+
+.max-price {
+  text-align: right;
+}
+/*----------------------------------------------------*/
+
 .filters h2 {
+  display: inline-block;
+  margin: 0;
+  padding: 22px 180px 23px 0;
   font-family: "Gilroy", "Gill Sans", sans-serif;
   font-size: 16px;
   font-weight: 900;
   line-height: 24px;
   text-transform: uppercase;
   letter-spacing: 3px;
-  
-  background-color: #dcdcdc;
 }
 
-.filter {
-  background-color: #eeeeee;
-}
-
-.filter fieldset {
-  border: none;
-}
-
-.filter legend,
+.filter--color legend,
+.filter--bluetooth legend,
 .product-item h3 {
+  margin: 0;
+  padding: 0;
   font-family: "Gilroy", "Gill Sans", sans-serif;
   font-size: 18px;
   font-weight: 900;
   line-height: 24px;
 }
+
+.filter legend {
+  margin: 0;
+  padding: 0;
+}
+
 
 .filter span {
   line-height: 40px;
@@ -806,11 +1025,130 @@ input[type="radio"].visually-hidden {
   background-color: inherit;
 }
 
-.sortation {
+.color--list {
+  margin: 0;
+  margin-top: 16px;
+  margin-bottom: 32px;
+  padding: 0;
+}
+
+.color--list li {
+  margin: 0;
+  padding: 0;
+}
+
+.color-item {
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+}
+
+.color-item::before {
+  content: "";
+  display: inline-block;
+  padding-right: 15px;
+  vertical-align: middle;
+  width: 27px;
+  height: 23px;
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+.color-check:checked ~ .color-item::before {
+  background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
+  background-position: left;  
+}
+
+.filter--bluetooth legend {
+  margin-bottom: 18px;
+}
+
+.filter--bluetooth ul {
+  margin: 0;
+  margin-bottom: 28px;
+  padding: 0;
+}
+
+.filter--bluetooth li {
+  margin: 0;
+  padding: 0;
+}
+
+.bluetooth-item {
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+}
+
+.bluetooth-item::before {
+  content: "";
+  display: inline-block;
+  padding-right: 15px;
+  vertical-align: middle;
+  width: 25px;
+  height: 25px;
+  background-image: url("../img/radio-off.svg");
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+.bluetooth-select:checked ~ .bluetooth-item::before {
+  background-image: url("../img/radio-on.svg");
+  background-repeat: no-repeat;
+  background-position: left;  
+}
+
+.filter .button {
+  padding-left: 41px;
+  padding-right: 41px;
+  border: none;
+}
+
+.catalog-items {
+  margin: 0;
+  padding: 0;
+  min-width: 832px;
+  width: 62.54%;
+}
+
+.sortation-container {
+  margin-bottom: 69px;
+  width: 100%;
+  
   background-color: #ebebeb;
 }
 
+.sortation {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 70px;
+  width: 762px;
+}
+
+.sortation-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 560px;
+}
+
+.link-wrapper:first-child {
+  display: flex;
+  justify-content: space-between;
+  width: 287px;
+}
+
+.sorted-active {
+  margin-right: 19px;
+  opacity: 0.2;
+}
+
 .sortation p {
+  display: inline-block;
+  margin: 23px 0px;
+  padding: 0;
   font-family: "Gilroy", "Gill Sans", sans-serif;
   font-size: 16px;
   font-weight: 900;
@@ -843,7 +1181,49 @@ input[type="radio"].visually-hidden {
   color: rgba(0, 0, 0, 0.6);
 }
 
+.list-products {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0;
+  margin-left: 70px;
+  padding: 0;
+  width: 760px;
+}
+
+.product-item {
+  position: relative;
+  display: flex;
+  flex-direction: column-reverse;
+  margin: 0;
+  margin-bottom: 74px;
+  padding: 0;
+}
+
+.item-wrapper {
+  display: flex;
+  justify-content: space-between;
+  height: 23px;
+}
+
+.item-wrapper h3 {
+  width: 74%;
+}
+
+.product-item img {
+  margin-bottom: 28px;
+}
+
+.product-item img:hover ~ .buttons-purchase,
+.product-item img:focus ~ .buttons-purchase,
+.buttons-purchase:hover,
+.buttons-purchase:active {
+  display: flex;
+}
+
 .catalog-item--price {
+  margin: 0;
+  padding: 0;
   font-family: "Gilroy", "Gill Sans", sans-serif;
   font-size: 16px;
   font-weight: normal;
@@ -852,21 +1232,53 @@ input[type="radio"].visually-hidden {
 }
 
 .new-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 29px;
+  right: 27px;
+  margin: 0;
+  width: 58px;
+  height: 58px;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  
   font-family: "Gilroy", "Gill Sans", sans-serif;
   font-size: 14px;
   font-weight: 900;
   line-height: 24px;
+  text-align: center;
   background-color: inherit;
   color: rgba(0, 0, 0, 0.2);
   letter-spacing: 2px;
   text-transform: uppercase;
 }
 
+.buttons-purchase {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  width: 360px;
+  height: 382px;
+  background-color: rgba(238, 238, 238, 0.7);
+}
+
+.buttons-purchase .button {
+  margin-top: 170px;
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
 .button-compare {
   font-family: "OpenSans", Arial, sans-serif;
   font-size: 13px;
   line-height: 20px;
-  color: rgba(0, 0, 0, 0.5);
   
   text-align: center;
   background-color: inherit;
@@ -882,7 +1294,40 @@ input[type="radio"].visually-hidden {
 }
 
 .pagination-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  margin-top: -15px;
+  margin-left: 72px;
+  margin-bottom: 77px;
+  padding: 0;
+  width: 760px;
   background-color: #ebebeb;
+}
+
+.pagination-button {
+  margin: 0;
+  padding: 30px;
+}
+
+.pagination-item {
+  margin: 0;
+  padding: 30px 0;
+}
+
+.pagination-item:nth-child(2) {
+  margin: 0 32px;
+}
+
+.pagination-wrapper ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.pagination-item a {
+  margin: 0;
+  padding: 0;
 }
 
 .pagination-list li,
