--- a/css/style.css
+++ b/css/style.css
@@ -746,7 +746,7 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   padding-top: 35px;
-  height: 125px;
+  min-height: 125px;
   
   
   font-family: "Gilroy", "Gill Sans", sans-serif;
@@ -1993,7 +1993,7 @@ input[type="radio"].visually-hidden {
 
 .modal-feedback {
   display: none;
-  top: 250px;
+  top: 50px;
   left: 50%;
   margin-left: -480px;
   width: 960px;
@@ -2100,6 +2100,22 @@ input[type="radio"].visually-hidden {
   height: 559px;
 }
 
+.modal-map img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  margin: 0;
+}
+
+.modal-map iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
+}
+
 .modal-close {
   position: absolute;
   top: 22px;
@@ -2107,6 +2123,7 @@ input[type="radio"].visually-hidden {
   width: 55px;
   height: 55px;
   border: none;
+  z-index: 3;
   
   opacity: 0.5;
   background-color: transparent;
